@@ -19,7 +19,9 @@ Changes in this release:
 - New option: shadow_shades = { 1.0, 1.0 } to draw a gradient on
               the shadow of some widgets.
 - New option: spinbuttonstyle = 1 to add a separator on the GtkSpinButton.
-- New option: textstyle = 1 to draw an inset on the text (use carefully).
+- New option: textstyle = 1 for an inset on the text (use carefully).
+              textstyle = 2 for an inverted inset on the text (use carefully).
+              textstyle = 3 for a subtle shadow on the text (use carefully).
 - New option: trough_shades = { 1.0, 1.0 } to draw a gradient on
               the trough of GtkScrollbar and GtkProgressBar.
 - Changed option: listviewstyle = 2 for a solid line.
